public interface Command {

    /**
     * Execute la commande
     */
    public void Execute();
}
