public class MoveCursor1 extends MoveCursor {
    /**
     * Commande pour deplacer le curseur du debut
     * @param offset Nombre de caractere lors du deplacement
     */
    public MoveCursor1(int offset) {
        super(1, offset);
    }

}
