public class MoveCursor2 extends MoveCursor {
    /**
     * Commande pour deplacer le curseur de fin
     * @param offset Nombre de caractere lors du deplacement
     */
    public MoveCursor2(int offset) {
        super(2, offset);
    }
}
