@startuml classDiagram
skinparam groupInheritance 4
skinparam Linetype polyline


class Application {
 
}

class ZoneDeTravail {
    String Texte
    String Buffer
    Int posCursor1
    Int posCursor2

    moveCursor(int nbCursor, int offset)
    copy()
    paste()
    delete()
    Insertchar(char a)
}

class Input {
    keyPressed()
}

abstract Command {
    Execute()
}

class MoveCursor1 {
    Int offset
    Execute()
}
class MoveCursor2 {
    Int offset
    Execute()
}

class Copy {
    Execute()
}

class Delete{
    Execute()
}

class Paste {
    Execute()
}

class Cut {
    Execute()
}

class InsertChar {
    char caracter
    Execute()
    getKey()
}

Application "1" *-- "1" ZoneDeTravail
Application *-- Input
Input *-- Command
ZoneDeTravail -- Command

Command <|--- MoveCursor1
Command <|--- MoveCursor2
Command <|--- Delete
Command <|--- Copy

Command <|--- Paste
Command <|--- Cut
Command <|--- InsertChar

Command --* Cut : Copy, Delete
Command --* InsertChar : Delete
Command --* Paste : Delete
Input -- InsertChar : getKey

@enduml